--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body, html{
 }
 
 .total{
-  display:  grid;
+  display:  flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 900px ;
   
 }
 body {
@@ -40,12 +40,13 @@ right: 0; */
 
 
 main{
-    position: static;
+    position: relative;
 }
 
 
 .caixa{
-
+  box-sizing: border-box;
+  
 }
 header{
 
